syntax = "proto3";

option go_package = "github.com/cego/nebula-provisioner/protocol";

package protocol;

message CertificateAuthority {
  string networkName = 1;
  string publicKeyPEM = 10;
  string sha256sum = 11;
}

message NetworkCRL {
  string networkName = 1;
  repeated string fingerprints = 2;
}
