syntax = "proto3";

import "google/protobuf/timestamp.proto";

option go_package = "github.com/cego/nebula-provisioner/server/store";

package store;

message CA {
  string networkName = 1;

  bytes publicKey = 10;
  bytes privateKey = 11;
  string sha256sum = 12;

  enum Status {
    Active = 0;
    Expired = 1;
    Inactive = 2;
    Next = 3;
  }
  Status status = 20;
}

message EnrollmentToken {
  string token = 1;
  string networkName = 2;
}

message EnrollmentRequest {
  bytes fingerprint = 1;
  google.protobuf.Timestamp created = 2;
  string token = 3;
  string networkName = 4;
  string csrPEM = 5;
  string clientIP = 6;
  repeated string groups = 7;
  string name = 8;
  string requestedIP = 9;
}

message Agent {
  bytes fingerprint = 1;
  google.protobuf.Timestamp created = 2;
  string networkName = 3;
  repeated string groups = 4;
  string csrPEM = 5;
  string assignedIP = 6;

  string signedPEM = 10;
  google.protobuf.Timestamp issuedAt = 11;
  google.protobuf.Timestamp expiresAt = 12;
  string name = 13;

  repeated string oldSignedPEMs = 20;
}

message IPRange {
  bytes network = 1;
  bytes netmask = 2;
}

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  google.protobuf.Timestamp created = 4;

  UserApprove approve = 10;
  bool disabled = 11;
}

message UserApprove {
  bool approved = 1;
  string approvedBy = 2;
  google.protobuf.Timestamp approvedAt = 3;
}
